--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <section class="half-width">
-        <div>
+    <section class="flex sec1">
+        <div class="half-width">
             <h1> The <span class="factory">Cake</span></h1>
             <h1> <span class="factory">Factory</h1>
 
@@ -29,17 +29,17 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/messages/t/101647211705770">Order
                 now</a>
         </div>
-        <div>
-            <img class="image-width" src="cake.png" alt="">
+        <div class="half-width">
+            <img class="image" src="cake.png" alt="">
         </div>
     </section>
 
 
-    <section id="back-ground" class="half-width">
-        <div>
-            <img class="image-size" src="cake.jpg" alt="">
+    <section class="flex sec2">
+        <div class="half-width">
+            <img class=" image-size" src="cake.jpg" alt="">
         </div>
-        <div>
+        <div class="half-width">
             <h1>About Us</h1>
             <p>It's basically homemode cake & pastry shop.At the beggining we faces many obstacles we were zero,because
                 we
@@ -51,50 +51,63 @@
         </div>
 
     </section>
-    <div style="width: 100%;">
+
+
+    <div style="text-align: center;">
         <h1>Our Menu</h1>
         <p>We provide Cakes,Bekary,Desserts & Snacks item</p>
     </div>
+
     <section style="display: flex;">
-
-
-
-
-        <div style="width: 33%;" class="menu-div">
-            <img class="menu-img" src="pudding.png" alt="">
-            <h2>Pudding</h2>
-            <p class="paragraph">single pudding 200/- only </p>
+        <div class="experience-item">
+            <div style="width: 33%;" class="menu-div">
+                <img class="item" src="pudding.png" alt="">
+                <h2>Pudding</h2>
+                <p class="paragraph">single pudding 200/- only </p>
+            </div>
         </div>
 
-        <div style="width: 33%;" class="menu-div">
-            <img class="menu-img" src="Choc-Fudge-Cake-b2d1909.png" alt="">
-            <h2>Chocolate Cake</h2>
-            <p class="paragraph">per pound 550/- only</p>
+        <div class="experience-item">
+            <div style="width: 33%;" class="menu-div">
+                <img src="Choc-Fudge-Cake-b2d1909.png" alt="">
+                <h2>Chocolate Cake</h2>
+                <p class="paragraph">per pound 550/- only</p>
+            </div>
         </div>
-        <div style="width: 33%;" class="menu-div">
-            <img class="menu-img" src="cover-donuts.png" alt="">
-            <h2>Doughnut</h2>
-            <p class="paragraph">per piece 150/- only</p>
-        </div>
+        <div class="experience-item">
+            <div style="width: 33%;" class="menu-div">
+                <img src="cover-donuts.png" alt="">
+                <h2>Doughnut</h2>
+                <p class="paragraph">per piece 150/- only</p>
+                <div>
+
+                </div>
+            </div>
+
 
 
 
 
     </section>
 
-    <section style="display: flex; background-color: aqua;">
-        <div style="width: 33%;">
+    <section class="special-align" style="display: flex; ">
+
+        <div style="width: 35%;">
             <h1>700K</h1>
             <p>Youtube views</p>
         </div>
-        <div style="width: 33%;">
+        <div style="width: 30%;">
             <h1>2.4M</h1>
             <p>Facebook Likes</p>
         </div>
-        <div style="width: 33%;">
+        <div style="width: 30%;">
             <h1>100k</h1>
             <p>Instagram followers</p>
         </div>
+
+
+
+
     </section>
 
     <footer>
